--- a/Lógica php - Front/1. Home/index.html
+++ b/Lógica php - Front/1. Home/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="../2. Clase carro/index.php">Carros</a></li>
-                <li><a href="../">Conta</a></li>
+                <li><a href="../3. Classe conta/index.php">Conta</a></li>
                 <li><a href="../4. Calculadora/index.php">Calculadora</a></li>
             </ul>
         </nav>
